--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,55 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="section">
+      <div class="container">
+        <div class="item">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+              alt="bridge on a mountain"
+            />
+          </figure>
+          <p>Explore The World</p>
+        </div>
+        <div class="item">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1572276596237-5db2c3e16c5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+              alt="road in the forest"
+            />
+          </figure>
+          <p>Wild Forest</p>
+        </div>
+        <div class="item">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80"
+              alt="white sand beach"
+            />
+          </figure>
+          <p>Sunny Beach</p>
+        </div>
+        <div class="item">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
+              alt="city ​​with ice"
+            />
+          </figure>
+          <p>City on Winter</p>
+        </div>
+        <div class="item">
+          <figure>
+            <img
+              src="https://images.unsplash.com/photo-1549880338-65ddcdfd017b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
+              alt="mountains and pink clouds"
+            />
+          </figure>
+          <p>Mountains - Clouds</p>
+        </div>
+      </div>
+    </div>
     <script type="module" src="js/index.js"></script>
   </body>
 </html>
