--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div class="section">
-      <div class="container">
-        <div class="item">
+      <div class="container gallery-wrapper">
+        <div class="item -active">
           <figure>
             <img
               src="https://images.unsplash.com/photo-1558979158-65a1eaa08691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80"
