Remove hidden character

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
           <figure>
             <img
               src="https://images.unsplash.com/photo-1551009175-8a68da93d5f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80"
-              alt="city ​​with ice"
+              alt="city with ice"
             />
           </figure>
           <p>City on Winter</p>
